# credit-risk-rag

./: .gitignore  README.md  banking_revised_judge_prompt.md  credit_risk_rag.py  eval_dataset.json  evaluate.py  generate_mock_data.py  pyproject.toml  requirements.txt  run_e2e.sh
